# scir

./: Cargo.toml  README.md
src/: main.rs  mod.rs
src/app/: authing.rs  client.rs  mod.rs
src/commands/: connect.rs  init.rs  mod.rs  saidify.rs
src/core/: ending.rs  mod.rs
tests/: cli.rs
