[package]
name = "scir"
version = "0.1.0"
edition = "2021"
authors = ["Phil Feairheller <pfeairheller@gmail.com>"]
license = "Apache-2.0"
description = "Signify Client in Rust"
readme = "README.md"
homepage = "https://github.com/WebOfTrust/scir"
repository = "https://github.com/WebOfTrust/scir"
keywords = ["cli", "signify", "keri", "cesr"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
keride = { path = "../keride" }
serde_json = { version = "~1", features = ["preserve_order"] }
